--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Klinik - Clinic Website Template</title>
+    <title>Applications</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -183,7 +183,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item bg-light rounded h-100 p-5" style=" position: relative;color: #ffffff; background-image: url('img/consult.jpg');background-size: cover;background-position: center;">
+                    <div class="service-item bg-light rounded h-100 p-5" style=" position: relative;color: #ffffff; background-image: url('img/61TCrbUtCYL.jpg');background-size: cover;background-position: center;">
                         <!-- Overlay for improving text readability -->
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); /* Adjust transparency as needed */border-radius: 15px;z-index: 0;">
                         </div>
@@ -191,7 +191,7 @@
                         <!-- Ensure content goes here, and z-index is used for layering -->
                         <div style="position: relative; z-index: 1;">
                             <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px; overflow: hidden;">
-                                <img src="img/planet-earth.jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
+                                <img src="img/meter.jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
                             </div>
 
                             <h4 class="mb-4" style="color: #ffffff; ">Measuring Instruments’ (Air - Water - Soil)</h4>
@@ -201,7 +201,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item bg-light rounded h-100 p-5" style="position: relative;color: #ffffff;background-image: url('img/lab.jpg');background-size: cover;background-position: center;">
+                    <div class="service-item bg-light rounded h-100 p-5" style="position: relative;color: #ffffff;background-image: url('img/Personal-Protection-Equipment-scaled.jpg');background-size: cover;background-position: center;">
 
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); border-radius: 15px;z-index: 0;">
                         </div>
@@ -209,7 +209,7 @@
                         <!-- Ensure content goes here, and z-index is used for layering -->
                         <div style="position: relative; z-index: 1;">
                             <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px; overflow: hidden;">
-                                <img src="img/laboratory.jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
+                                <img src="img/personal-protective-equipment.jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
                             </div>
 
                             <h4 class="mb-4" style="color: #ffffff; ">Personal protection Equipment (PPE)</h4>
@@ -220,7 +220,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item bg-light rounded h-100 p-5" style=" position: relative;color: #ffffff; background-image: url('img/consult.jpg');background-size: cover;background-position: center;">
+                    <div class="service-item bg-light rounded h-100 p-5" style=" position: relative;color: #ffffff; background-image: url('img/repairs.jpg');background-size: cover;background-position: center;">
                         <!-- Overlay for improving text readability -->
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); /* Adjust transparency as needed */border-radius: 15px;z-index: 0;">
                         </div>
@@ -228,7 +228,7 @@
                         <!-- Ensure content goes here, and z-index is used for layering -->
                         <div style="position: relative; z-index: 1;">
                             <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px; overflow: hidden;">
-                                <img src="img/planet-earth.jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
+                                <img src="img/repair-service.jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
                             </div>
 
                             <h4 class="mb-4" style="color: #ffffff; ">Maintenance & Support</h4>
@@ -238,7 +238,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item bg-light rounded h-100 p-5" style="position: relative;color: #ffffff;background-image: url('img/lab.jpg');background-size: cover;background-position: center;">
+                    <div class="service-item bg-light rounded h-100 p-5" style="position: relative;color: #ffffff;background-image: url('img/training.jpg');background-size: cover;background-position: center;">
 
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); border-radius: 15px;z-index: 0;">
                         </div>
@@ -246,7 +246,7 @@
                         <!-- Ensure content goes here, and z-index is used for layering -->
                         <div style="position: relative; z-index: 1;">
                             <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px; overflow: hidden;">
-                                <img src="img/laboratory.jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
+                                <img src="img/presentation.jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
                             </div>
 
                             <h4 class="mb-4" style="color: #ffffff; ">Training</h4>
@@ -256,7 +256,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item bg-light rounded h-100 p-5" style="position: relative;color: #ffffff;background-image: url('img/control.jpg');background-size: cover;background-position: center;">
+                    <div class="service-item bg-light rounded h-100 p-5" style="position: relative;color: #ffffff;background-image: url('img/calibration_temperature-2.jpg');background-size: cover;background-position: center;">
                         <!-- Overlay for improving text readability -->
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); /* Adjust transparency as needed */border-radius: 15px;z-index: 0;">
                         </div>
@@ -264,17 +264,17 @@
                         <!-- Ensure content goes here, and z-index is used for layering -->
                         <div style="position: relative; z-index: 1;">
                             <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px; overflow: hidden;">
-                                <img src="img/tablet.jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
+                                <img src="img/instrumentation.jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
                             </div>
 
-                            <h4 class="mb-4" style="color: #ffffff; ">Calibration</h4>
+                            <h4 class="mb-4" style="color: #ffffff; ">Calibration </h4>
                         </div>
 
 
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item bg-light rounded h-100 p-5" style=" position: relative;color: #ffffff; background-image: url('img/consult.jpg');background-size: cover;background-position: center;">
+                    <div class="service-item bg-light rounded h-100 p-5" style=" position: relative;color: #ffffff; background-image: url('img/Laboratory-glassware.jpg');background-size: cover;background-position: center;">
                         <!-- Overlay for improving text readability -->
                         <div style="position: absolute;top: 0;left: 0;right: 0;bottom: 0;background: rgba(0, 0, 0, 0.4); /* Adjust transparency as needed */border-radius: 15px;z-index: 0;">
                         </div>
@@ -282,10 +282,10 @@
                         <!-- Ensure content goes here, and z-index is used for layering -->
                         <div style="position: relative; z-index: 1;">
                             <div class="d-inline-flex align-items-center justify-content-center bg-white rounded-circle mb-4" style="width: 65px; height: 65px; overflow: hidden;">
-                                <img src="img/planet-earth.jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
+                                <img src="img/glassware.jpg" alt="Description" style="height: 100%; width: auto; min-width: 100%; position: relative; left: 50%; transform: translateX(-50%);">
                             </div>
 
-                            <h4 class="mb-4" style="color: #ffffff; ">Glassware & Chemicals</h4>
+                            <h4 class="mb-4" style="color: #ffffff;">Glassware <br>& Chemicals</h4>
                         </div>
 
 
