--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
-
+    <script src="js/contact.js" defer></script>
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
