--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
                     <div class="owl-carousel-item position-relative">
                         <img class="img-fluid" src="img/carousel-1.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0">Cardiology</h1>
+                            <h1 class="display-1 text-white mb-0">قياسات بيئية</h1>
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
                         <img class="img-fluid" src="img/carousel-2.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0">Neurology</h1>
+                            <h1 class="display-1 text-white mb-0">توريد</h1>
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
                         <img class="img-fluid" src="img/carousel-3.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0">Pulmonary</h1>
+                            <h1 class="display-1 text-white mb-0">صيانة</h1>
                         </div>
                     </div>
                 </div>
