--- a/feature.html
+++ b/feature.html
@@ -9,8 +9,10 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/site.webmanifest">
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -93,7 +95,7 @@
                     <a href="#" class="nav-link  active dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
                         <a href="feature.html" class="dropdown-item  active">Partners</a>
-                        <a href="appointment.html" class="dropdown-item">Products</a>
+                        <a href="product.html" class="dropdown-item">Products</a>
                         <a href="team.html" class="dropdown-item">Our Staff</a>
                         <a href="testimonial.html" class="dropdown-item">Company we deal with</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
@@ -101,7 +103,7 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Products<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="product.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Products<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -140,7 +142,7 @@
                             </div>
 
                             <h4 class="mb-4" style="color: #ffffff; ">Lovibond</h4>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <a class="btn" href="lovibond.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
 
                         </div>
 
@@ -160,7 +162,7 @@
                             </div>
 
                             <h4 class="mb-4" style="color: #ffffff; ">Ecom</h4>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <a class="btn" href="ecom.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
 
                         </div>
 
@@ -180,7 +182,7 @@
                             </div>
 
                             <h4 class="mb-4" style="color: #ffffff; ">Tenmars</h4>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <a class="btn" href="tenmars.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
 
                         </div>
 
@@ -200,7 +202,7 @@
                             </div>
 
                             <h4 class="mb-4" style="color: #ffffff; ">Casella</h4>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <a class="btn" href="casella.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
 
                         </div>
 
@@ -220,7 +222,7 @@
                             </div>
 
                             <h4 class="mb-4" style="color: #ffffff; ">Aeroqual</h4>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <a class="btn" href="aeroqaul.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
 
                         </div>
 
@@ -240,7 +242,7 @@
                             </div>
 
                             <h4 class="mb-4" style="color: #ffffff; ">TEN</h4>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <a class="btn" href="ten.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
 
                         </div>
 
