--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu rounded-0 rounded-bottom m-0">
                         <a href="feature.html" class="dropdown-item">Partners</a>
-                        <a href="appointment.html" class="dropdown-item">Products</a>
+                        <a href="product.html" class="dropdown-item">Products</a>
                         <a href="team.html" class="dropdown-item">Our Staff</a>
                         <a href="testimonial.html" class="dropdown-item">Company we deal with</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
@@ -109,7 +109,7 @@
                 </div>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Products<i class="fa fa-arrow-right ms-3"></i></a>
+            <a href="product.html" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Products<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
     </nav>
     <!-- Navbar End -->
