--- a/about.html
+++ b/about.html
@@ -261,7 +261,7 @@
                             <img class="img-fluid" src="img/team-4.jpg" alt="">
                         </div>
                         <div class="team-text bg-light text-center p-4">
-                            <h5>صيانة وتوريد</h5>
+                            <h5>صيانة ومعايرة</h5>
                             <p class="text-primary">Department</p>
                             
                         </div>
