--- a/index.html
+++ b/index.html
@@ -131,11 +131,31 @@
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
-                        <img class="img-fluid" src="img/carousel-3.jpg" alt="">
+                        <img class="img-fluid" src="img/IMG-20240205-WA0052.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0">صيانة</h1>
+                            <h1 class="display-1 text-white mb-0"></h1>
                         </div>
                     </div>
+                    <div class="owl-carousel-item position-relative">
+                        <img class="img-fluid" src="img/IMG-20240205-WA0067.jpg" alt="">
+                        <div class="owl-carousel-text">
+                            <h1 class="display-1 text-white mb-0"></h1>
+                        </div>
+                    </div>
+                    <div class="owl-carousel-item position-relative">
+                        <img class="img-fluid" src="img/IMG-20240205-WA0057.jpg" alt="">
+                        <div class="owl-carousel-text">
+                            <h1 class="display-1 text-white mb-0"></h1>
+                        </div>
+                    </div>
+                    <div class="owl-carousel-item position-relative">
+                        <img class="img-fluid" src="img/IMG-20240205-WA0025.jpg" alt="">
+                        <div class="owl-carousel-text">
+                            <h1 class="display-1 text-white mb-0"></h1>
+                        </div>
+                    </div>
+                    
+                    
                 </div>
             </div>
         </div>
@@ -154,7 +174,7 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">About Us</p>
                     <h1 class="mb-4">Why You Should Trust Us? Get Know About Us!</h1>
-                    <p>is one of the specialized companies that implements integrated scientific and environmental applications and engineering services for customers by a group of engineers and experts in scientific and environmental fields.</p>
+                    <p>Al Nada Scientific Office is one of the specialized companies that implements integrated scientific and environmental applications and engineering services for customers by a group of engineers and experts in scientific and environmental fields.</p>
                     <p><i class="far fa-check-circle text-primary me-3"></i>Integrated scientific and environmental solutions</p>
                     <p><i class="far fa-check-circle text-primary me-3"></i>Supplying measuring and controlling equipment in factories and production lines</p>
                     <p><i class="far fa-check-circle text-primary me-3"></i>laboratory Equipment, Glassware and Chemicals</p>
@@ -427,7 +447,7 @@
                             <img class="img-fluid" src="img/team-4.jpg" alt="">
                         </div>
                         <div class="team-text bg-light text-center p-4">
-                            <h5>صيانة وتوريد</h5>
+                            <h5>صيانة ومعايرة</h5>
                             <p class="text-primary">Department</p>
 
                         </div>
